crates/ruff_python_parser/tests/snapshots/invalid_syntax@except_stmt_missing_exception.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
---
## AST

```
Module(
    ModModule {
        node_index: NodeIndex(None),
        range: 0..166,
        body: [
            Try(
                StmtTry {
                    node_index: NodeIndex(None),
                    range: 0..37,
                    body: [
                        Pass(
                            StmtPass {
                                node_index: NodeIndex(None),
                                range: 9..13,
                            },
                        ),
                    ],
                    handlers: [
                        ExceptHandler(
                            ExceptHandlerExceptHandler {
                                range: 14..37,
                                node_index: NodeIndex(None),
                                type_: None,
                                name: Some(
                                    Identifier {
                                        id: Name("exc"),
                                        range: 24..27,
                                        node_index: NodeIndex(None),
                                    },
                                ),
                                body: [
                                    Pass(
                                        StmtPass {
                                            node_index: NodeIndex(None),
                                            range: 33..37,
                                        },
                                    ),
                                ],
                                runtime_body: None,
                            },
                        ),
                    ],
                    orelse: [],
                    finalbody: [],
                    is_star: false,
                    runtime_body: None,
                    runtime_handlers: None,
                    runtime_orelse: None,
                    runtime_finalbody: None,
                },
            ),
            Try(
                StmtTry {
                    node_index: NodeIndex(None),
                    range: 92..165,
                    body: [
                        Pass(
                            StmtPass {
                                node_index: NodeIndex(None),
                                range: 101..105,
                            },
                        ),
                    ],
                    handlers: [
                        ExceptHandler(
                            ExceptHandlerExceptHandler {
                                range: 106..123,
                                node_index: NodeIndex(None),
                                type_: None,
                                name: None,
                                body: [
                                    Pass(
                                        StmtPass {
                                            node_index: NodeIndex(None),
                                            range: 119..123,
                                        },
                                    ),
                                ],
                                runtime_body: None,
                            },
                        ),
                        ExceptHandler(
                            ExceptHandlerExceptHandler {
                                range: 124..140,
                                node_index: NodeIndex(None),
                                type_: None,
                                name: None,
                                body: [
                                    Pass(
                                        StmtPass {
                                            node_index: NodeIndex(None),
                                            range: 136..140,
                                        },
                                    ),
                                ],
                                runtime_body: None,
                            },
                        ),
                        ExceptHandler(
                            ExceptHandlerExceptHandler {
                                range: 141..165,
                                node_index: NodeIndex(None),
                                type_: None,
                                name: Some(
                                    Identifier {
                                        id: Name("exc"),
                                        range: 152..155,
                                        node_index: NodeIndex(None),
                                    },
                                ),
                                body: [
                                    Pass(
                                        StmtPass {
                                            node_index: NodeIndex(None),
                                            range: 161..165,
                                        },
                                    ),
                                ],
                                runtime_body: None,
                            },
                        ),
                    ],
                    orelse: [],
                    finalbody: [],
                    is_star: true,
                    runtime_body: None,
                    runtime_handlers: None,
                    runtime_orelse: None,
                    runtime_finalbody: None,
                },
            ),
        ],
        runtime_body: None,
    },
)
```
## Errors

  |
1 | try:
2 |     pass
3 | except as exc:
  |        ^^ Syntax Error: Expected one or more exception types
4 |     pass
5 | # If a '*' is present then exception type is required
  |


   |
 6 | try:
 7 |     pass
 8 | except*:
   |        ^ Syntax Error: Expected one or more exception types
 9 |     pass
10 | except*
   |


   |
 8 | except*:
 9 |     pass
10 | except*
   |        ^ Syntax Error: Expected one or more exception types
11 |     pass
12 | except* as exc:
13 |     pass
   |


   |
10 | except*
11 |     pass
12 | except* as exc:
   |         ^^ Syntax Error: Expected one or more exception types
13 |     pass
   |
